
not yet  BJH  Release 10.92.00

              pnmcrop: Make -margin effective with -blank-image=minimize.

              pnmnorm: With bounds specified as -bpercent or -bsingle and
              -wpercent or -wsingle, and the image has only one brightness,
              don't attempt any normalization - leave image as is.  (Previous
              version produce all black with -keephues).

              pnmnorm: Fix bug: output too dark when -bpercent and -wpercent
              indicate overlapping values.  Broken since Netpbm 10.43 (June
              2008).

              pbmtext: Fix double-free crash with -font .  Introduced in
              Netpbm 10.91 (June 2020).

              pgmtopbm: Add -randomseed.

              pcdovtoppm: Fix some garbage from the conversion from csh to sh
              in Netpbm 9.12 (March 2001) in conversion from csh arrays that
              should have stopped it from working at all, despite reports from
              users that they were using it.

              Configure: remove obsolete question about URL to put in pointer
              man pages of yesteryear.

20.06.28 BJH  Release 10.91.00

              pamstretch-gen: Add -quiet (supposedly added in 10.86, but never
              worked).

              pamstereogram: Add -tileable.  Thanks Scott Pakin.

              pcdovtoppm: Implement -version, -plain, and -quiet.

              pcdovtoppm: more secure temporary file handling.

              pcdovtoppm: Improve the way it fails when 'hpcdtoppm' fails.

              anytopnm, pnmmargin: Fail properly when unable to create
              temporary file.  Broken in Netpbm 10.75 (June 2016).

              winicontoppm: Fix undefined behavior for various invalid input.
              Always broken.  Winicontoppm was new in Netpbm 9.3 (June 2000).

              winicontoppm: Fix incorrect output with 256 pixel wide or high
              image.  Always broken.  Winicontoppm was new in Netpbm 9.3 (June